[package]
name = "bevy_console"
version = "0.11.1"
edition = "2021"
authors = ["RichoDemus <git@richodemus.com>"]
homepage = "https://github.com/RichoDemus/bevy-console"
repository = "https://github.com/RichoDemus/bevy-console"
description = "dev console for bevy"
license = "MIT"
readme = "README.md"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false }
clap = { version = "4.5", features = ["derive"] }
bevy_console_derive = { path = "./bevy_console_derive", version = "0.5.0" }
bevy_egui = { git = "https://github.com/notmd/bevy_egui.git", branch = "bevy_0.14" }
shlex = "1.3"

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }

[workspace]
members = ["bevy_console_derive"]
